[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "optkit"
version = "0.1.0"
description = "Options pricing and Greeks toolkit"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "numpy", "scipy", "pandas", "plotly", "yfinance",
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools.packages.find]
include = ["optkit*"]